--- a/Views/Orders/details.cshtml
+++ b/Views/Orders/details.cshtml
@@ -7,27 +7,27 @@
 <form>
     <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">訂單編號</label>
-        <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.OrderId">
+        <input disabled type="text" class="form-control" aria-describedby="emailHelp" value="@Model.OrderId">
     </div>
 
     <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">產品編號</label>
-        <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.ProductId">
+        <input disabled type="text" class="form-control" aria-describedby="emailHelp" value="@Model.ProductId">
     </div>
 
     <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">單價</label>
-        <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.UnitPrice">
+        <input disabled type="text" class="form-control" aria-describedby="emailHelp" value="@Model.UnitPrice">
     </div>
 
     <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">訂購數量</label>
-        <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.Quantity">
+        <input disabled type="text" class="form-control" aria-describedby="emailHelp" value="@Model.Quantity">
     </div>
 
     <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">折扣</label>
-        <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.Discount">
+        <input disabled type="text" class="form-control" aria-describedby="emailHelp" value="@Model.Discount">
     </div>
 
     <a class="nav-link text-dark" href="/Orders">
