--- a/Views/Products/details.cshtml
+++ b/Views/Products/details.cshtml
@@ -8,7 +8,7 @@
     {
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">產品ID</label>
-            <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.ProductId">
+            <input disabled type="text" class="form-control" aria-describedby="emailHelp" value="@Model.ProductId">
         </div>
     }
 
@@ -16,7 +16,7 @@
     {
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">產品名稱</label>
-            <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.ProductName">
+            <input disabled type="text" class="form-control" aria-describedby="emailHelp" value="@Model.ProductName">
         </div>
     }
 
@@ -24,7 +24,7 @@
     {
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">供應商ID</label>
-            <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.SupplierId">
+            <input disabled type="text" class="form-control" aria-describedby="emailHelp" value="@Model.SupplierId">
         </div>
     }
 
@@ -32,7 +32,7 @@
     {
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">型別ID</label>
-            <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.CategoryId">
+            <input disabled type="text" class="form-control" aria-describedby="emailHelp" value="@Model.CategoryId">
         </div>
     }
 
@@ -40,7 +40,7 @@
     {
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">數量</label>
-            <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.QuantityPerUnit">
+            <input disabled type="text" class="form-control" aria-describedby="emailHelp" value="@Model.QuantityPerUnit">
         </div>
     }
 
@@ -48,7 +48,7 @@
     {
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">單價</label>
-            <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.UnitPrice">
+            <input disabled type="text" class="form-control" aria-describedby="emailHelp" value="@Model.UnitPrice">
         </div>
     }
 
@@ -56,7 +56,7 @@
     {
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">庫存數量</label>
-            <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.UnitsInStock">
+            <input disabled type="text" class="form-control" aria-describedby="emailHelp" value="@Model.UnitsInStock">
         </div>
     }
 
@@ -64,7 +64,7 @@
     {
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">訂購量</label>
-            <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.UnitsOnOrder">
+            <input disabled type="text" class="form-control" aria-describedby="emailHelp" value="@Model.UnitsOnOrder">
         </div>
     }
 
@@ -72,14 +72,14 @@
     {
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">再次訂購量</label>
-            <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.ReorderLevel">
+            <input disabled type="text" class="form-control" aria-describedby="emailHelp" value="@Model.ReorderLevel">
         </div>
     }
 
     
     <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">中止</label>
-        <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.Discontinued">
+        <input disabled type="text" class="form-control" aria-describedby="emailHelp" value="@Model.Discontinued">
     </div>
 
     <a class="nav-link text-dark" href="/Products">
