--- a/Views/Products/edit.cshtml
+++ b/Views/Products/edit.cshtml
@@ -3,86 +3,100 @@
 @{
     ViewData["Title"] = "編輯產品";
 }
-<form>
-    @if (Model.ProductId != 0)
-    {
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">產品ID</label>
-            <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.ProductId">
+
+<form id="formCreateProduct">
+    <div class="row mb-3">
+        <label for="productID" class="col-sm-2 col-form-label">產品ID</label>
+        <div class="col-sm-10">
+            <input type="number" class="form-control" id="productID" value="@Model.ProductId">
         </div>
-    }
-
-    @if (!string.IsNullOrEmpty(Model.ProductName))
-    {
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">產品名稱</label>
-            <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.ProductName">
-        </div>
-    }
-
-    @if (Model.SupplierId != null)
-    {
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">供應商ID</label>
-            <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.SupplierId">
-        </div>
-    }
-
-    @if (Model.CategoryId != null)
-    {
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">型別ID</label>
-            <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.CategoryId">
-        </div>
-    }
-
-    @if (!string.IsNullOrEmpty(Model.QuantityPerUnit))
-    {
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">數量</label>
-            <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.QuantityPerUnit">
-        </div>
-    }
-
-    @if (Model.UnitPrice != null)
-    {
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">單價</label>
-            <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.UnitPrice">
-        </div>
-    }
-
-    @if (!string.IsNullOrEmpty(Model.ProductName))
-    {
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">庫存數量</label>
-            <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.ProductName">
-        </div>
-    }
-
-    @if (Model.UnitsInStock != null)
-    {
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">訂購量</label>
-            <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.UnitsInStock">
-        </div>
-    }
-
-    @if (Model.UnitsOnOrder != null)
-    {
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">再次訂購量</label>
-            <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.UnitsOnOrder">
-        </div>
-    }
-
-
-    <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">中止</label>
-        <input type="text" class="form-control" aria-describedby="emailHelp" value="@Model.Discontinued">
     </div>
-
-    <a class="nav-link text-dark" href="/Products">
-        <input type="button" class="btn btn-primary" value="Back List">
-    </a>
+    <div class="row mb-3">
+        <label for="productName" class="col-sm-2 col-form-label">產品名稱</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="productName" value="@Model.ProductName">
+        </div>
+    </div>
+    <div class="row mb-3">
+        <label for="supplierID" class="col-sm-2 col-form-label">供應商ID</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="supplierID" value="@Model.SupplierId">
+        </div>
+    </div>
+    <div class="row mb-3">
+        <label for="categoryID" class="col-sm-2 col-form-label">型別ID</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="categoryID" value="@Model.CategoryId">
+        </div>
+    </div>
+    <div class="row mb-3">
+        <label for="quantity" class="col-sm-2 col-form-label">數量</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="quantity" value="@Model.QuantityPerUnit">
+        </div>
+    </div>
+    <div class="row mb-3">
+        <label for="unitPrice" class="col-sm-2 col-form-label">單價</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="unitPrice" value="@Model.UnitPrice">
+        </div>
+    </div>
+    <div class="row mb-3">
+        <label for="unitInStock" class="col-sm-2 col-form-label">庫存數量</label>
+        <div class="col-sm-10">
+            <input type="number" class="form-control" id="unitInStock" value="@Model.UnitsInStock">
+        </div>
+    </div>
+    <div class="row mb-3">
+        <label for="unitOnOrder" class="col-sm-2 col-form-label">訂購量</label>
+        <div class="col-sm-10">
+            <input type="number" class="form-control" id="unitOnOrder" value="@Model.UnitsOnOrder">
+        </div>
+    </div>
+    <div class="row mb-3">
+        <label for="recorderLevel" class="col-sm-2 col-form-label">再次訂購量</label>
+        <div class="col-sm-10">
+            <input type="number" class="form-control" id="recorderLevel" value="@Model.ReorderLevel">
+        </div>
+    </div>
+    <div class="row mb-3">
+        <label for="recorderLevel" class="col-sm-2 col-form-label">中止</label>
+        <div class="col-sm-10">
+            <select id="recorderLevel" class="form-control">
+                <option></option>
+                <option value="false">False</option>
+                <option value="true">True</option>
+            </select>
+            @*<input type="text" class="form-control" id="recorderLevel" value="@Model.Discontinued">*@
+        </div>
+    </div>
+    <div class="row mb-3">
+        <input id="submitEditProduct" type="submit" class="btn btn-success" value="Edit Product">
+        <div class="col-sm-10">
+            <a class="text-dark" href="/Products">
+                <input type="button" class="btn btn-primary" value="Back List">
+            </a>
+        </div>
+    </div>
 </form>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript">
+    //$(document).ready(function () {
+    //    $('select option[value=true]').attr("selected", true);
+    //}
+    $('#formCreateProduct').on('submit', function (event) {
+        var productData = {
+            id: "@Model.ProductId",
+            ProductName: $('#productName').val(),
+            QuantityPerUnit: $('#quantity').val(),
+            UnitPrice: $('#unitPrice').val(),
+            UnitsInStock: $('#unitInStock').val(),
+            UnitsOnOrder: $('#unitOnOrder').val(),
+            ReorderLevel: $('#recorderLevel').val(),
+            Discontinued: $('#recorderLevel').val()
+        }
+
+        SaveData("Update", productData, "product");
+        event.preventDefault();
+    });
+</script>
