Cshtml Page Add Disabled Attribute

--- a/Views/Products/edit.cshtml
+++ b/Views/Products/edit.cshtml
@@ -8,7 +8,7 @@
     <div class="row mb-3">
         <label for="productID" class="col-sm-2 col-form-label">產品ID</label>
         <div class="col-sm-10">
-            <input type="number" class="form-control" id="productID" value="@Model.ProductId">
+            <input disabled type="number" class="form-control" id="productID" value="@Model.ProductId">
         </div>
     </div>
     <div class="row mb-3">
