Create Button Layout Fixed

--- a/Views/Orders/create.cshtml
+++ b/Views/Orders/create.cshtml
@@ -42,11 +42,14 @@
         <a class="text-dark">
             <input id="submitCreateOrder" type="submit" class="btn btn-success" value="Create Order">
         </a>
+        <div class="col-sm-10">
 
-        <a class="text-dark" href="/Orders">
-            <input type="button" class="btn btn-primary" value="Back List">
-        </a>
+            <a class="text-dark" href="/Orders">
+                <input type="button" class="btn btn-primary" value="Back List">
+            </a>
+        </div>
     </div>
+
 </form>
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
