--- a/Views/Products/create.cshtml
+++ b/Views/Products/create.cshtml
@@ -70,9 +70,12 @@
     </div>
     <div class="row mb-3">
         <input id="submitCreateProduct" type="submit" class="btn btn-success" value="Create Product">
-        <a class="text-dark" href="/Products">
-            <input type="button" class="btn btn-primary" value="Back List">
-        </a>
+        <div class="col-sm-10">
+
+            <a class="text-dark" href="/Products">
+                <input type="button" class="btn btn-primary" value="Back List">
+            </a>
+        </div>
     </div>
 </form>
 
