Product Give SupplierID and CategoryID

--- a/Views/Products/create.cshtml
+++ b/Views/Products/create.cshtml
@@ -91,8 +91,8 @@
         var productData = {
             ProductId: 79,
             ProductName: $('#productName').val(),
-            SupplierID: 2,
-            CategoryID: 2,
+            SupplierID: $('#supplierID').val(),
+            CategoryID: $('#categoryID').val(),
             Discontinued: false
         };
 
