Edit Function Bug Fixed

--- a/Views/Orders/edit.cshtml
+++ b/Views/Orders/edit.cshtml
@@ -34,7 +34,7 @@
     <div class="row mb-3">
         <label for="discount" class="col-sm-2 col-form-label">折扣</label>
         <div class="col-sm-10">
-            <input type="number" class="form-control" id="discount" value="@Model.Discount">
+            <input type="text" class="form-control" id="discount" value="@Model.Discount">
         </div>
     </div>
     <div class="row mb-3">
