Model State is Back

--- a/Views/Products/edit.cshtml
+++ b/Views/Products/edit.cshtml
@@ -95,7 +95,7 @@
             UnitsInStock: $('#unitInStock').val(),
             UnitsOnOrder: $('#unitOnOrder').val(),
             ReorderLevel: $('#recorderLevel').val(),
-            Discontinued: 0,
+            Discontinued: false,
         }
 
         SaveData("Update", productData, "product");
