--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
     <a id="aEdit" href='#' class='btn btn-small btn-primary jtheme2' style="display:none;">dark_green</a>
     <a id="aError" href='#' class='btn btn-small btn-primary jtheme2' style="display:none;">dark_red</a>
     <a id="aCreate" href='#' class='btn btn-small btn-primary jtheme2' style="display:none;">yellow</a>
+    <a id="aDelete" href='#' class='btn btn-small btn-primary jtheme2' style="display:none;">brown</a>
 
 
     <header>
